# algebraic-prelude

./: .gitignore  Main.hs  README.md  algebraprelude.cabal  graph.dot  make_graph.sh
Prelude/: Algebra.hs  Alt.hs  Applicative.hs  Apply.hs  Associative.hs  Bifunctor.hs  Bind.hs  Braided.hs  Builtins.hs  Category.hs  Comonad.hs  Compose.hs  Const.hs  Contravariant.hs  Discrete.hs  Distributive.hs  Dual.hs  Extend.hs  Foldable.hs  Functor.hs  Groupoid.hs  Id.hs  Isomorphism.hs  Monad.hs  MonadTrans.hs  Monoid.hs  Mu.hs  Natural.hs  Product.hs  Profunctor.hs  Semifunctor.hs  Semigroup.hs  Semigroupoid.hs  Tensor.hs  Traversable.hs
