name:                algebra-prelude
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       
      base       >= 4.6 && <4.7
    , containers >= 0.5 && <0.6
    , mtl
    , transformers
  default-language:    Haskell2010
